# EasyMCServer

./: .gitignore  README.md  launcher.py  notas.txt  pyproject.toml  requirements.txt
easymcserver/: cli.py  download.py  utils.py
easyminecraftserver/: cli.py  requirements.txt  utils.py
src/easymcserver/: launcher.py  utils.py
src/easymcserver/config/: __init__.py  jvm_args.py  properties.py
src/easymcserver/downloader/: __init__.py  download.py
src/easymcserver/system/: __init__.py  memory.py  sys_info.py
src/easymcserver/ui/: __init__.py  menus.py
