[project]
name = "easyminecraftserver"
version = "0.1.0"
description = "CLI para facilitar a instalação de servidores Java e Bedrock"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests",
    "rich",
    "InquirerPy",
    "psutil"
]

[project.scripts]
easymc = "easyminecraftserver.cli:main"
