[project]
name = "easymcserver"
version = "0.2.0"
description = "CLI para facilitar a instalação e a configuração de servidores de Minecraft Java e Bedrock"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.32,<3",
    "rich>=14.2,<15",
    "InquirerPy>=0.3,<1",
    "psutil>=7.1,<8",
    "jproperties>=2.1,<3"
]

dev = [
    "black>=26,<27",
    "ruff>=0.15,<1",
    "pytest>=9,<10",
    "build>=1,<2",
    "twine>=6,<7"
]

[project.scripts]
easymc = "easymcserver.launcher:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
# extend-ignore removed for compatibility with installed ruff version
